[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mimic_replay"
version = "1.1.4"
authors = [
  { name="Veronika Todd", email="veronika.todd@gmail.com" },
  { name="Lucas Sorribes", email="lucas.sorribes@gmail.com" },
  { name="Erik Wiens", email="erik.wiens@gmail.com" },
  { name="Louis Mascari", email="lmascari16@gmail.com" }
]
dependencies = [
    "uuid",
    "requests",
    "bcrypt",
    "bs4"
]
description = "MIMIC installation script, which enables your application to communicate with your MIMIC server."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
MIMIC = "https://mimic-replay.com"
Github = "https://github.com/2401-Team-4/capstone"